Fixing the navbar z-index

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -91,6 +91,7 @@
   border-radius: 5px;
   padding: 8px 16px;
   box-shadow: 2px 4px 10px 2px rgba(0, 0, 0, 0.05);
+  z-index: 5;
 
   &-links {
     height: 100%;
