--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -49,7 +49,7 @@
 }
 
 .explore-section {
-  height: 35vh;
+  height: 40vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(2, 2, 2, 0.5)),
     url("../../assets/img/image\ 7.png");
   background-repeat: no-repeat;
